🐝 fix: last little alignment problem on chrome android

--- a/src/components/Topbar/styles.styl
+++ b/src/components/Topbar/styles.styl
@@ -18,5 +18,6 @@
             overflow       hidden
             white-space    nowrap
             font-size 1.3125rem
+            line-height 1
             margin    0
             overflow hidden
